--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "new_musicomm",
   "version": "0.1.0",
   "description": "renewal musicomm",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
